syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_apply.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Apply {
                fun: Ident(
                    Ident(f),
                ) @ 0..1,
                args: [
                    Ident(
                        Ident(x),
                    ) @ 2..3,
                    Ident(
                        Ident(y),
                    ) @ 4..5,
                ],
            },
        ) @ 0..5,
    ],
} @ 0..5
