syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_bool.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Lit(
                Bool(
                    true,
                ),
            ),
        ) @ 0..4,
    ],
} @ 0..4
