syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_lambda_apply.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Apply {
                fun: Lambda {
                    params: [
                        Ident(a) @ 2..3,
                        Ident(b) @ 4..5,
                    ],
                    body: Infix {
                        op: Add @ 11..12,
                        lhs: Ident(
                            Ident(a),
                        ) @ 9..10,
                        rhs: Ident(
                            Ident(b),
                        ) @ 13..14,
                    } @ 9..14,
                } @ 0..15,
                args: [
                    Lit(
                        Num(
                            Ratio {
                                numer: 1,
                                denom: 1,
                            },
                        ),
                    ) @ 16..17,
                    Lit(
                        Num(
                            Ratio {
                                numer: 2,
                                denom: 1,
                            },
                        ),
                    ) @ 18..19,
                ],
            },
        ) @ 0..19,
    ],
} @ 0..19
