syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_let_fn.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Let {
                name: Ident(add) @ 4..7,
                expr: Lambda {
                    params: [
                        Ident(x) @ 8..9,
                        Ident(y) @ 10..11,
                    ],
                    body: Infix {
                        op: Add @ 16..17,
                        lhs: Ident(
                            Ident(x),
                        ) @ 14..15,
                        rhs: Ident(
                            Ident(y),
                        ) @ 18..19,
                    } @ 14..19,
                } @ 4..19,
                body: Apply {
                    fun: Ident(
                        Ident(add),
                    ) @ 23..26,
                    args: [
                        Lit(
                            Num(
                                Ratio {
                                    numer: 1,
                                    denom: 1,
                                },
                            ),
                        ) @ 27..28,
                        Lit(
                            Num(
                                Ratio {
                                    numer: 2,
                                    denom: 1,
                                },
                            ),
                        ) @ 29..30,
                    ],
                } @ 23..30,
            },
        ) @ 0..30,
    ],
} @ 0..30
