syntax/snapshots/typed_lambda_calculus__syntax__parse__tests__parse_unit.snap
---
source: src/syntax/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Unit,
        ) @ 0..2,
    ],
} @ 0..2
